--- a/style.css
+++ b/style.css
@@ -10,26 +10,32 @@ html {
   font-family: Tilt Neon;
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
+
 .container header {
   background-color: #57AEFF;
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: 180px;
+
 }
 
-img{
-  width: 28em;
+#img {
+  width: 27em;
+  height: 8em;
 }
+
 .container main {
-  width: min(90vw, 950px);
+  width: 50%;
   margin: auto;
   flex: 1 1 0;
-}
 
+}
 
 .principal {
   display: flex;
@@ -43,53 +49,112 @@ img{
   padding: 5px;
   width: 300px;
   height: 3.5em;
-  background: #D9D9D9;
+  background: white;
   text-align: center;
   margin: 20px;
   font-size: 40px;
   margin-top: -20px;
   box-shadow: 0px 10px 40px #00000056;
-
 }
 
-#formulario {
+.text {
+  text-align: center;
+  font-size: 35px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.group-icons {
+  width: 2.8rem;
+  text-align: right;
+}
+
+#alerta{
+  display: none;
+}
+.content-form {
+  padding: 40px;
+}
+
+.formulario {
   display: flex;
   flex-direction: row;
-  padding: 10px;
+  padding: 5px;
   justify-content: center;
-  background-color: #D9D9D9;
+  background-color: white;
   align-items: center;
-
+  border-radius: 10px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
+
 
 .group-input {
   margin: 10px;
 }
 
-#text {
-  border-radius: 5px;
-  height: 30px;
-  text-align: left;
-  width: 190px;
-  border: none;
-  border-radius: 10px;
-  padding: 15px;
-  background-color: rgba(255, 255, 255, 0.32);
-  color: black;
-  font-size: 12pt;
-
+.single-input {
+  position: relative;
+  margin: 30px;
 }
 
-#button {
+.single-input label {
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  color: rgb(150, 150, 150);
+  cursor: text;
+  transition: 0.5s ease-in-out;
+}
+
+.input {
+  width: 100%;
+  padding: 5px;
+  border: 0;
+  border-bottom: 2px solid black;
+  outline: 0;
+  font-size: 16px;
+  color: rgb(80, 80, 80);
+  transition: 0.5s ease-in-out;
+  background-color: white;
+}
+
+.input:focus,
+.input:valid {
+  border-bottom: 2px solid #57AEFF;
+}
+
+.input:focus~label,
+.input:valid~label {
+  transform: translateY(-24px);
+  font-size: 12px;
+  color: #57AEFF;
+}
+
+
+.button {
   width: 10em;
   height: 2em;
   border-radius: 2em;
-  background-color: rgba(85, 231, 34, 1);
+  background-color: rgb(121, 236, 79);
   margin: 2em;
+  font-weight: bold;
+  font-size: 16px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: .7rem;
+}
+
+#salvar{
+  width: 1rem;
+  height: 1rem;
+  
 }
 
 #radio {
-  margin: 1.5em;
+  margin: 1em;
   width: 1em;
 }
 
@@ -98,32 +163,72 @@ img{
   flex-direction: row;
   align-items: center;
   text-align: center;
+  font-size: 16px;
 }
 
 .tabela {
-  width: 100%;
-  padding-top: 20px;
+  width: 95%;
+  border-collapse: collapse;
+  margin: 20px auto;
+  background-color: white;
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
-table,tr,td {
-  border: 1px solid black;
+th,
+td {
+  padding: 12px 15px;
+  text-align: left;
 }
 
-.container footer{
+th {
   background-color: #57AEFF;
-  height: 4rem;
-vertical-align: middle;
+  color: white;
 }
 
-.icon{
- display: flex;
- justify-content:right;
- gap: 0.75rem;
+tr:nth-child(even) {
+  background-color: #e2e0e0;
+  ;
 }
-.icones{
+
+t:hover{
+  background-color: #57AEFF;
+}
+
+.group-table-icons{
+  width: 1.5rem;
+}
+
+
+.container footer {
+  position: relative;
+  background-color: #57AEFF;
+  height: 3rem;
+  justify-content: space-between;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .9rem;
+
+}
+
+.icones {
   width: 2rem;
+
 }
-.paragrafo{
+
+.paragrafo {
   font-size: 20px;
   text-align: center;
+  flex: 1;
+  align-items: center;
+  margin: 0 auto;
+  justify-content: center;
+  display: grid;
 }
