--- a/style.css
+++ b/style.css
@@ -204,9 +204,11 @@ tr:nth-child(even) {
 
 .group-icons-create:hover {
   color: #57AEFF;
+  cursor: pointer;
 }
 
 .group-icons-trash:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -224,11 +226,11 @@ tr:nth-child(even) {
 .container footer {
   position: relative;
   background-color: #57AEFF;
-  height: 3rem;
+  height: 3.3rem;
   justify-content: space-between;
   bottom: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .icon {
@@ -237,7 +239,8 @@ tr:nth-child(even) {
   justify-content: center;
   gap: .9rem;
   padding: .5rem;
-
+  position: absolute;
+  right: 0;
 }
 
 .icones {
