--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
-.button {
+#button {
   width: 10em;
   height: 2em;
   border-radius: 2em;
@@ -152,7 +152,7 @@ input[type=number]::-webkit-outer-spin-button {
   gap: .7rem;
 }
 
-.button:hover {
+#button:hover {
   background-color: rgb(121, 236, 79);
   cursor: pointer;
 }
