--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
 
 * {
   padding: 0;
@@ -7,7 +9,8 @@
 }
 
 html {
-  font-family: Tilt Neon;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 .container {
@@ -31,21 +34,21 @@ html {
 }
 
 .container main {
-  width: 50%;
   margin: auto;
   flex: 1 1 0;
 }
 
 .principal {
+  width: 900px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 .blocks {
   border-radius: 0.625rem;
   padding: 0.313rem;
-  width: 18.75rem;
+  width: 19.75rem;
   height: 3.5em;
   background: white;
   text-align: center;
@@ -55,20 +58,30 @@ html {
   box-shadow: 0px 10px 40px #00000056;
 }
 
-.blocks:hover{
+.blocks:hover {
   transform: translateY(-.65rem);
   transition: .2s;
 }
 
 .text {
   text-align: center;
-  font-size: 2.125rem;
+  font-size: 1.5rem;
   display: flex;
   justify-content: space-between;
+  color: rgb(117, 117, 117);
+  margin-bottom: 15px;
+  padding-left: 10px;
+  font-weight: normal
+}
+
+.card {
+  font-weight: bold;
+  font-size: .7em;
 }
 
 .group-icons {
-  width: 2.5rem;
+  width: 1.8rem;
+  height: 1.8rem;
   text-align: right;
 }
 
@@ -77,7 +90,9 @@ html {
 }
 
 .content-form {
-  padding: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 900px;
 }
 
 .formulario {
@@ -147,7 +162,7 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 2em;
   background-color: #57AEFF;
   margin: 2em;
-  font-weight: bold;
+  font-weight: bolder;
   font-size: 16px;
   color: white;
   display: flex;
@@ -182,13 +197,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .tabela {
-  width: 95%;
+  width: 900px;
   border-collapse: collapse;
-  margin: 20px auto;
   background-color: white;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  
 }
 
 th,
@@ -211,14 +224,14 @@ tr:nth-child(even) {
   color: #57AEFF;
   cursor: pointer;
   transform: scale(1.3);
-    transition: .2s;
+  transition: .2s;
 }
 
 .group-icons-trash:hover {
   cursor: pointer;
   color: red;
   transform: scale(1.3);
-    transition: .2s;
+  transition: .2s;
 }
 
 .group-icons-create {
@@ -229,16 +242,16 @@ tr:nth-child(even) {
 .group-icons-trash {
   width: 1.5rem;
   height: 1.5rem;
-  
+
 }
 
 
-#create{
+#create {
   border: none;
   background-color: transparent;
 }
 
-#trash{
+#trash {
   border: none;
   background-color: transparent;
 }
@@ -279,5 +292,3 @@ tr:nth-child(even) {
   display: grid;
   color: white;
 }
-
-
